@@ -381,6 +381,7 @@ typedef enum sc_type {
 	SC__MANHOLE,
 	SC_CHAOS,
 	SC__BLOODYLUST,
+	SC__MAELSTROM,
 
 	SC_GN_CARTBOOST,
 	SC_BLOODSUCKER,
@@ -820,7 +821,7 @@ enum si_type {
 	SI_ENERGYGAIN = 425,
 	SI_CHANGE = 426,
 	SI_REVITALIZE = 427,
-// 428
+	SI_BLOODYLUST = 428,
 	SI_SWINGDANCE = 429,
 	SI_SYMPHONYOFLOVERS = 430,
 // 431-433
